--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MyDSM",
-  "name": "Create React App Sample",
+  "name": "MyDSM",
   "icons": [
     {
       "src": "MyDSM.ico",
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "MyDSM192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "MyDSM12.png",
       "type": "image/png",
       "sizes": "512x512"
     }
